Fixed inconsistent text sizes on mobile devices.

--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     height: 100%;
     background: url(/images/background_squares.png);
+    -webkit-text-size-adjust: 100%;
 }
 
 /***********************
